<resources>
    <string name="app_name">HomeWork03</string>
    <string name="passwordCount_str">Select Passwords count:</string>
    <string name="passwordLength_str">Select Passwords length:</string>
    <string name="password_str">Password:</string>
    <string name="threadBtn_str">Generate Passwords (Thread)</string>
    <string name="asyncBtn_str">Generate Passwords (Async Task)</string>
</resources>
